# timetable_to_image

./: .gitignore  MANIFEST.in  pyproject.toml
src/TimetableToImage/: __init__.py
src/TimetableToImage/Image/: func.py
src/TimetableToImage/Timetable/: __init__.py  bell.py  bells.py  day.py  func.py  lesson.py  pair.py  week.py
